[package]
name = "break-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
anyhow = "1.0.75"
thiserror = "1.0.49"
lazy_static = "1.4.0"
uuid = { version = "1.4.1", features = ["v4"] }