[package]
name = "break-calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
anyhow = "1.0.72"
thiserror = "1.0.59"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1.40"
#actix-web = "4.6.0"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.26.2"
strum_macros = "0.26.2"
flate2 = "1.0.30"
tempfile = "3.10.1"
threadpool = "1.8.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
num_cpus = "1.13.0"
downcast-rs = "1.2.1"